<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/startblue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="#fff"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/app_description"
            android:textSize="15sp"
            android:layout_marginTop="25dp"/>

        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/join_us"
                android:layout_margin="10dp"
                android:background="@drawable/buttonstyle2"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_us"
                />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:layout_width="300dp"
            android:id="@+id/mob"
            android:layout_height="wrap_content"
            android:hint="Mobile Number"
            android:inputType="number"
            android:textColor="@color/startblue"
            android:textColorHint="@color/lightblue"/>
        <EditText
            android:drawablePadding="10dp"
            android:id="@+id/upass"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:textColor="@color/startblue"
            android:textColorHint="@color/lightblue"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="40dp"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle2"
            android:drawableEnd="@drawable/ic_send_black_24dp"
            android:text="Login"
            android:shadowColor="#fff"
            android:textColor="#fff"/>
    </LinearLayout>
</LinearLayout>